GK JomSocial Feed for J!3

--- a/mod_gk_js_feed/language/en-GB.mod_gk_js_feed.ini
+++ b/mod_gk_js_feed/language/en-GB.mod_gk_js_feed.ini
@@ -7,8 +7,10 @@ MOD_JS_FEED_USE_CSS="Use CSS"
 MOD_JS_FEED_USE_CSS_DESC="Enable/disable module CSS file."
 
 COM_MODULES_JS_FEED_ABOUT_US_FIELDSET_LABEL="About"
-MOD_JS_FEED_ABOUT_US_CONTENT="<div style='color: #555; line-height: 18px; font-size: 12px; padding: 20px 0 0'><p><strong>Author:</strong></p>GK JomSocial Feed is a product of <a href='http://www.gavick.com' target='_blank' style='color: #2f4c6d'>GavickPro</a>.  Our company objective since 2007 has been to produce and release professional, effective and leading-edge <a href='http://www.gavick.com/products/templates.html' target='_blank' style='color: #2f4c6d'>Joomla Templates</a> in response to the needs of website developers.  Additionally, we provide <a href='http://www.gavick.com/best-free-joomla-tab-module.html' target='_blank' style='color: #2f4c6d'>free extensions</a> and modules, and we constantly update <a href='http://www.gavick.com/magazine/' target='_blank' style='color: #2f4c6d'>Gavick Magazine</a>, our online journal which provides breaking industry news and tips you can use to be more effective and to avoid possible issues.<p style='font-size: 11px; text-align: center;margin: 60px -10px 0; border-top: 1px solid #eee; padding: 6px 0'>JS_FEED GK5 is released under the <a href='http://www.gnu.org/licenses/gpl-2.0.html' target='_blank' style='color: #2f4c6d'>GNU/GPL v2 license.</a></p>"
+MOD_JS_FEED_ABOUT_US_CONTENT="<div style='color: #555; line-height: 18px; font-size: 12px; padding: 20px 0 0'><p><strong>Author:</strong></p>GK JomSocial Feed is a product of <a href='http://www.gavick.com' target='_blank' style='color: #2f4c6d'>GavickPro</a>.  Our company objective since 2007 has been to produce and release professional, effective and leading-edge <a href='http://www.gavick.com/products/templates.html' target='_blank' style='color: #2f4c6d'>Joomla Templates</a> in response to the needs of website developers.  Additionally, we provide <a href='http://www.gavick.com/best-free-joomla-tab-module.html' target='_blank' style='color: #2f4c6d'>free extensions</a> and modules, and we constantly update <a href='http://www.gavick.com/magazine/' target='_blank' style='color: #2f4c6d'>Gavick Magazine</a>, our online journal which provides breaking industry news and tips you can use to be more effective and to avoid possible issues.<p style='font-size: 11px; text-align: center;margin: 60px -10px 0; border-top: 1px solid #eee; padding: 6px 0'>GK JomSocial Feed GK5 is released under the <a href='http://www.gnu.org/licenses/gpl-2.0.html' target='_blank' style='color: #2f4c6d'>GNU/GPL v2 license.</a></p></div>"
 
+COM_MODULES_JS_FEED_STATUS_FIELDSET_LABEL="Status settings"
+COM_MODULES_JS_FEED_PHOTO_FIELDSET_LABEL="Photo settings"
 COM_MODULES_JS_FEED_ADVANCED_FIELDSET_LABEL="Advanced settings"
 
 MOD_JS_FEED_FORCE_DISABLED="Force disabled"
@@ -19,6 +21,10 @@ MOD_JS_FEED_ENABLED="Enabled"
 MOD_JS_FEED_LEFT="Left"
 MOD_JS_FEED_RIGHT="Right"
 
+MOD_JS_FEED_CONTENT_TYPE="Content type"
+MOD_JS_FEED_CONTENT_TYPE_DESC="You can select the type of content displayed in the module"
+MOD_JS_FEED_STATUS="Status"
+MOD_JS_FEED_PHOTO="Photo"
 MOD_JS_FEED_DATA_SOURCE="Data source"
 MOD_JS_FEED_DATA_SOURCE_DESC="You can specify the data source of the statuses"
 MOD_JS_FEED_LATEST_STATUSES="Latest status updates"
@@ -37,8 +43,25 @@ MOD_JS_FEED_SHOW_USERNAME="Show username"
 MOD_JS_FEED_SHOW_USERNAME_DESC="You can display the username of the status author"
 MOD_JS_FEED_READON_TEXT="Read more text"
 MOD_JS_FEED_READON_TEXT_DESC="You can specify the read more button text. Leave it blank to get the text from the language file"
-MOD_JS_FEED_TEXT_LIMIT="Text limit (chars)"
+MOD_JS_FEED_TEXT_LIMIT="Text limit"
 MOD_JS_FEED_TEXT_LIMIT_DESC="You can specify the available amount of chars for the statuses"
 
 MOD_JS_FEED_READ_MORE="Read More"
 MOD_JS_FEED_NO_STATUS="Selected status doesn't exist"
+
+MOD_JS_FEED_SHOW_TEXT="Show text"
+MOD_JS_FEED_SHOW_TEXT_DESC="You can enable/disable showing text over photo"
+MOD_JS_FEED_TEXT_POSITION="Text position"
+MOD_JS_FEED_TEXT_POSITION_DESC="You can specify the text position over photo"
+MOD_JS_FEED_TOP="Top"
+MOD_JS_FEED_BOTTOM="Bottom"
+MOD_JS_FEED_TEXT_COLOR="Text color"
+MOD_JS_FEED_TEXT_COLOR_DESC="You can specify the text color depending of your photo"
+MOD_JS_FEED_DARK="Dark"
+MOD_JS_FEED_LIGHT="Light"
+
+MOD_JS_FEED_IMAGE_TYPE="Image type"
+MOD_JS_FEED_IMAGE_TYPE_DESC="You can adjust quality of the image using this option"
+MOD_JS_FEED_ORIGINAL="Original image"
+MOD_JS_FEED_IMAGE="JomSocial image"
+MOD_JS_FEED_THUMBNAIL="JomSocial thumbnail"
