v.1.1 with support for displaying user profile photo.

--- a/mod_gk_js_feed/language/en-GB.mod_gk_js_feed.ini
+++ b/mod_gk_js_feed/language/en-GB.mod_gk_js_feed.ini
@@ -25,6 +25,7 @@ MOD_JS_FEED_CONTENT_TYPE="Content type"
 MOD_JS_FEED_CONTENT_TYPE_DESC="You can select the type of content displayed in the module"
 MOD_JS_FEED_STATUS="Status"
 MOD_JS_FEED_PHOTO="Photo"
+MOD_JS_FEED_USER="User profile"
 MOD_JS_FEED_DATA_SOURCE="Data source"
 MOD_JS_FEED_DATA_SOURCE_DESC="You can specify the data source of the statuses"
 MOD_JS_FEED_LATEST_STATUSES="Latest status updates"
