--- a/mod_gk_js_feed/language/en-GB.mod_gk_js_feed.ini
+++ b/mod_gk_js_feed/language/en-GB.mod_gk_js_feed.ini
@@ -25,6 +25,7 @@ MOD_JS_FEED_CONTENT_TYPE="Content type"
 MOD_JS_FEED_CONTENT_TYPE_DESC="You can select the type of content displayed in the module"
 MOD_JS_FEED_STATUS="Status"
 MOD_JS_FEED_PHOTO="Photo"
+MOD_JS_FEED_USER="User profile"
 MOD_JS_FEED_DATA_SOURCE="Data source"
 MOD_JS_FEED_DATA_SOURCE_DESC="You can specify the data source of the statuses"
 MOD_JS_FEED_LATEST_STATUSES="Latest status updates"
@@ -43,7 +44,7 @@ MOD_JS_FEED_SHOW_USERNAME="Show username"
 MOD_JS_FEED_SHOW_USERNAME_DESC="You can display the username of the status author"
 MOD_JS_FEED_READON_TEXT="Read more text"
 MOD_JS_FEED_READON_TEXT_DESC="You can specify the read more button text. Leave it blank to get the text from the language file"
-MOD_JS_FEED_TEXT_LIMIT="Text limit"
+MOD_JS_FEED_TEXT_LIMIT="Text limit (chars)"
 MOD_JS_FEED_TEXT_LIMIT_DESC="You can specify the available amount of chars for the statuses"
 
 MOD_JS_FEED_READ_MORE="Read More"
